--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
 *.html
+*.xml
+*.pdf
+*.redxml
+*.swp
 *.txt
-lib/
+*.upload
+*~
+.tags
+/*-[0-9][0-9].xml
+/.*.mk
+/.gems/
+/.refcache
+/.venv/
+/.vscode/
+/lib
+/node_modules/
+/versioned/
+Gemfile.lock
+archive.json
+package-lock.json
+report.xml
+!requirements.txt
